9712: Fix new user password visibility toggle

--- a/app/assets/stylesheets/local/users/_login_instructions.scss
+++ b/app/assets/stylesheets/local/users/_login_instructions.scss
@@ -42,10 +42,6 @@
   }
 
   #login_instructions {
-    #preamble {
-      display: none;
-    }
-
     #instructions {
       page-break-after: always;
     }
